Updated API Monitoring
